; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_subsegs.c_subseg_set.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/extr_subsegs.c_subseg_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@now_seg = common dso_local global i64 0, align 8
@now_subseg = common dso_local global i64 0, align 8
@mri_common_symbol = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @subseg_set(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* @now_seg, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* @now_subseg, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %16, label %12

12:                                               ; preds = %8, %2
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @subseg_set_rest(i64 %13, i64 %14)
  br label %16

16:                                               ; preds = %12, %8
  store i32* null, i32** @mri_common_symbol, align 8
  ret void
}

declare dso_local i32 @subseg_set_rest(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
